<?xml version="1.0"?>
<package format="3">
  <name>ws2812b</name>
  <version>0.0.1</version>
  <description>ROS 2 package for WS2812B LED control</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
